# flim-components

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  todo.txt
components/animations/: vibrant_animation.py
components/buttons/: base_button.py  collapse_button.py  select_buttons.py  tab_buttons.py  toggle_button.py
components/inputs/: checkbox.py  fancy_checkbox.py  input_number.py  input_select.py  input_text.py  switch.py  textarea.py
components/misc/: channel_cps.py  loading_widget.py  progress_bar.py  time_counter.py
components/plots/: flim_plot.py
components/popups/: box_message.py  popup.py
components/typography/: gradient_text.py
examples/: base_button.py  channel_cps.py  collapse_button.py  cps_counter.py  flim_inputs.py  flim_plot.py  flim_title.py  gradient_text.py  input_number.py  input_select.py  input_text.py  loading_widget.py  overlay_widget.py  progress_bar.py  select_button_group.py  slider.py  switch.py  tabs.py  textarea.py
flim_components/examples/: SBR.py  base_button.py  channel_cps.py  check_card.py  checkbox.py  collapse_button.py  cps_counter.py  flim_inputs.py  flim_plot.py  flim_title.py  gradient_text.py  input_number.py  input_select.py  input_text.py  layout_separator.py  loading_overlay_widget.py  loading_widget.py  overlay_widget.py  progress_bar.py  select_button_group.py  slider.py  switch.py  tabs.py  textarea.py  time_counter.py  time_tagger.py  toggle_buttons.py
flim_components/layouts/: compact_layout.py  layout_separator.py
flim_components/styles/: SBR_styles.py  animations_styles.py  app_theme_styles.py  buttons_styles.py  check_card_styles.py  cps_counter_styles.py  loading_styles.py  time_counter_styles.py
flim_components/utils/: constants.py  data_converter.py  data_formatter.py  date_time_utils.py  errors_utils.py  file_utils.py  flim_utils.py  tasks.py  (+3 more)
layouts/: compact_layout.py  overlay_widget.py
models/: models.py
styles/: buttons_styles.py  cps_counter_styles.py  inputs_styles.py  popups_styles.py  progress_bar_styles.py
utils/: data_formatter.py  file_utils.py  layout_utils.py  reader_utils.py  resource_path.py
(+54 files in other folders)
