[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flim_components"
version = "0.1.3"
description = "A graphical library based on PyQt6 for developing and standardizing FLIM LABS applications."
authors = [{ name="Aurora Sirigu", email="aurora.sirigu@5bits.it" }]
maintainers = [
    { name = "Aurora Sirigu", email = "aurora.sirigu@5bits.it" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "PyQt6>=6.7.0",
    "PyQt6-Qt6>=6.7.0",
    "PyQt6-sip>=13.6.0",
    "pyqtgraph>=0.13.4",
    "numpy>=1.26.4",
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
homepage = "https://github.com/flim-labs/flim-components"







